--- a/index.html
+++ b/index.html
@@ -102,18 +102,18 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="img/projeto1.jpg" alt="" class="img-fluid">
-                                <div class="carousel-caption"><a href="" class="btn btn-lg btn-custom btn-dark ">
+                                <div class="carousel-caption"><a href="https://6418f5e7d29751113ce29100--whimsical-rabanadas-30dca2.netlify.app" target="_blank" class="btn btn-lg btn-custom btn-dark ">
                                         Visitar<i class="fa-sharp fa-solid fa-square-arrow-up-right"></i></a></div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/projeto2.jpg" alt="" class="img-fluid">
-                                <div class="carousel-caption"><a href="" class="btn btn-lg btn-custom btn-dark ">
+                                <div class="carousel-caption"><a href="https://astounding-shortbread-1da57c.netlify.app" target="_blank" class="btn btn-lg btn-custom btn-dark ">
                                         <i></i> Visitar <i class="fa-sharp fa-solid fa-square-arrow-up-right"></i></a>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/projeto3.jpg" alt="" class="img-fluid">
-                                <div class="carousel-caption"><a href="" class="btn btn-lg btn-custom btn-dark ">
+                                <div class="carousel-caption"><a href="https://zippy-flan-a644cc.netlify.app" target="_blank" class="btn btn-lg btn-custom btn-dark ">
                                         <i></i> Visitar <i class="fa-sharp fa-solid fa-square-arrow-up-right"></i></a>
                                 </div>
                             </div>
