mensagem de commit

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <i class=" icone navbar-toggler-icon fa-solid fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="nav-principal">
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ml-auto lista-nav">
                         <li class="nav-item">
                             <a href="#recursos" class="nav-link">Sobre</a>
                         </li>
@@ -54,7 +54,7 @@
             <div class="row recursos conteudo-recursos">
                 <div class="col col-md-6 card-titulo">
 
-                    <div class="box-img"><img src="img/avatarpng.png" alt="" class="img-fluid img-perfil"></div>
+                    <div class="box-img"></div>
 
                     <h1>Olá, me chamo</h1>
                     <p>Everton Marinho</p>
@@ -133,7 +133,7 @@
         </div>
     </section>
 
-    <section id="box-skills ">
+    <section id="box-skills">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-12 m-auto skills">
@@ -177,7 +177,7 @@
 
 
 
-
+    
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
