--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                     <div class="col-sm-4 col-lg-2 mb-4">
                         <div class="box cards">
-                            <p>React.JS</p>
+                            <p>Java</p>
                             <img src="img/java.svg" alt="">
                         </div>
                     </div>
