--- a/index.html
+++ b/index.html
@@ -263,18 +263,18 @@
 
                 <div class="col-md-5 col-sm-6 mb-4 cards_projetos">
                     <div class="image-container ">
-                        <img src="img/Bitech.png" class="img-fluid img-projeto" alt="Imagem 1">
+                        <img src="img/betweencodes.png" class="img-fluid img-projeto" alt="Imagem 1">
                         <div class="legenda-imagem">
-                            <p>21/12/2023</p>
+                            <p>10/01/2023</p>
                             <a class="link_git" target="_blank" target="_blank"
-                                href="https://github.com/Everton617/Front-EndVirtualLoja-fullstack"><i class="fa-brands fa-github"></i></a>
+                                href="https://github.com/Everton617/BetweenCodes"><i class="fa-brands fa-github"></i></a>
                             <a class="link_projeto" target="_blank"
-                                href="https://virtualstorebitech.netlify.app/">Projeto <i
+                                href="https://betweencodes.netlify.app/">Projeto <i
                                     class="fa-solid fa-square-arrow-up-right"></i></a>
                         </div>
                         <div class="overlay">
                             <div class="legenda-projeto">
-                                <p>BiTech</p>
+                                <p>BetweenCodes</p>
                                 <div class="icon">
                                     <i class="fa-brands fa-html5" style="color: #4d08b4;"></i>
                                     <i class="fa-brands fa-react" style="color: #4d08b4;"></i>
