--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                         <a href="https://www.linkedin.com/in/everton-marinho-5822ab218/" target="_blank"
                             class="btn btn-lg btn-custom btn-dark btn-recursos"><i class="fa-brands fa-linkedin"></i> </a> 
-                            <a href="https://drive.google.com/file/d/15ahgM3nhxmU1ooCpJnxNi33f7s8WD0TD/view?usp=sharing" target="_blank"
+                            <a href="https://drive.usercontent.google.com/uc?id=15ahgM3nhxmU1ooCpJnxNi33f7s8WD0TD&export=download" target="_blank"
                             class="btn btn-lg btn-custom btn-dark btn-recursos"><i class="fa-sharp fa-solid fa-file-pdf"></i>></i></a> 
                     </div>
 
